fix(presences): MA-400 Fix event deletion + align date label w/ dates in table event list

--- a/presences/src/main/resources/public/sass/global/components/containers/events/_table.scss
+++ b/presences/src/main/resources/public/sass/global/components/containers/events/_table.scss
@@ -1,12 +1,4 @@
 .events-table {
-  thead {
-    tr {
-      th:nth-child(2) {
-        text-align: right;
-      }
-    }
-  }
-
   &-body {
     border-bottom: 1px solid $presences-grey-light;
 
